<resources>
    <string name="app_name">National Hockey Teams</string>
    <!--Login activity-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="loginButton">log in</string>
    <string name="signinButton">sign in</string>
    <string name="name">Name:  </string>
    <string name="team">Team:  </string>
    <string name="birthplace">Birthplace:  </string>
    <string name="birthdate">Birthdate:  </string>
    <string name="position">Position:  </string>
    <string name="number">Number:  </string>
    <string name="weight">Weight:  </string>
    <string name="height">Height:  </string>
    <string name="registration_enter_username">username</string>
    <string name="registration_enter_password">password</string>
    <string name="registration_reenter_password">re-enter password</string>
    <string name="create_account_button">Create Account</string>
    <string name="registration_cancel_button">Cancel</string>
    <string name="header_coach">Head coach: </string>
    <string name="header_captain">Captain: </string>
    <string name="header_url">url: </string>
    <string name="enter_name">Enter name</string>
    <string name="search_button">Search</string>
    <string name="cancel_button">Cancel</string>
    <string name="nav_teams">Teams</string>
    <string name="nav_search">Search player</string>
    <string name="nav_app_info">About app</string>
    <string name="nav_credits">Credits</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_app">App</string>
    <string name="nav_login_info">Login info</string>
    <string name="credits_title">Credits</string>
    <string name="credits_first">Players and teams information (statistics, photo, some biography) - nhl.com and en.khl.ru</string>
    <string name="credits_second">Players and teams information (staistics, physique, team\'s rosters) - wikipedia.org</string>
    <string name="credits_third">App logo - nationalteamsoficehockey.com</string>
    <string name="credits_fourth">Flags - flaglane.com</string>
    <string name="credits_button">Back</string>

</resources>
