<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_people_black_48dp"
            android:title="@string/nav_teams" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_48dp"
            android:title="@string/nav_search"/>
    </group>

    <item android:title="@string/nav_app">
        <menu>
            <item
                android:id="@+id/nav_app"
                android:icon="@drawable/ic_android_black_48dp"
                android:title="@string/nav_app_info"/>
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_thumb_up_black_48dp"
                android:title="@string/nav_credits"/>
        </menu>
    </item>

    <item android:title="@string/nav_login_info">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_48dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
