<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.example.azvk.nationalhockeyteams.CreditsActivity">

    <ImageView
        android:src="@drawable/app_logo"
        android:layout_width="150dp"
        android:layout_height="134dp"
        android:id="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_credits"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@+id/activity_credits"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:text="@string/credits_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/activity_credits"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:text="@string/credits_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/activity_credits"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/credits_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/credits_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/credits_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginTop="8dp" />

    <Button
        android:text="@string/credits_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creditsButton"
        app:layout_constraintLeft_toLeftOf="@+id/activity_credits"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/activity_credits"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
